- automatic flagging of line and RFI for continuum calibration done - problems with conversion of datasets and applying system temperatures for old WSRT data. Needs to be solved. Working for continuum data, but nor for line when not applying system temperatures

--- a/ipython-notebooks/tutorials/A1 - Calibrating single pointing full polarisation WSRT data.ipynb
+++ b/ipython-notebooks/tutorials/A1 - Calibrating single pointing full polarisation WSRT data.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -321,13 +321,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "CONVERT - INFO : ### Converted MS file 3C147.MS to UVFITS using CASA toolkit! ###\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
       "CONVERT - INFO : ### Converted MS file 3C138.MS to UVFITS using CASA toolkit! ###\n"
      ]
     },
@@ -357,13 +350,6 @@
      "output_type": "stream",
      "text": [
       "CONVERT - INFO : ### Using MIRIAD wsrtfits task to convert data from UVFITS to MIRIAD format ###\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "CONVERT - INFO : ### Converted UVFITS file 3C147.MS to MIRIAD format using MIRIAD task wsrtfits! ###\n"
      ]
     },
     {
@@ -401,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -418,9 +404,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CROSSCAL - INFO : ########## Starting CROSS CALIBRATION ##########\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CROSSCAL - INFO : ### WSRT data set. Fringe stopping was done online! ###\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -434,17 +434,7 @@
      "text": [
       "CROSSCAL - INFO : ### Bandpass calibration on the flux calibrator data done ###\n"
      ]
-    }
-   ],
-   "source": [
-    "ccal.bandpass()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -456,14 +446,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "CROSSCAL - INFO : # Bandpass solutions in flux calibrator data found. Using them! #\n"
+      "CROSSCAL - INFO : # Bandpass solutions from flux calibrator not found #\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "CROSSCAL - INFO : # Bandpass from flux calibrator data copied to polarised calibrator data #\n"
+      "CROSSCAL - INFO : # Deriving bandpass from polarised calibrator using mfcal #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CROSSCAL - INFO : # Bandpass solutions from polarised calibrator derived #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CROSSCAL - INFO : # Continuing with polarisation calibration (leakage, angle) from polarised calibrator data #\n"
      ]
     },
     {
@@ -479,17 +483,7 @@
      "text": [
       "CROSSCAL - INFO : ### Polarisation calibration on the polarised calibrator data done ###\n"
      ]
-    }
-   ],
-   "source": [
-    "ccal.polarisation()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -510,10 +504,17 @@
      "text": [
       "CROSSCAL - INFO : ### All solutions copied to target data ###\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CROSSCAL - INFO : ########## CROSS CALIBRATION done ##########\n"
+     ]
     }
    ],
    "source": [
-    "ccal.transfer_to_target()"
+    "ccal.go()"
    ]
   },
   {
@@ -542,369 +543,152 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "SELFCAL - INFO : # Moved to directory /data/adebahr/apertif/tutorial/A1/selfcal #\n"
+      "SELFCAL - INFO : ### Automatic flagging of HI-line/RFI started ###\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "SELFCAL - INFO : ### Splitting of target data into individual freqeuncy chunks started ###\n"
+      "SELFCAL - INFO : # Moved to directory /data/adebahr/apertif/tutorial/A1/selfcal/00 #\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "SELFCAL - INFO : # Applying calibrator solutions to target data before averaging #\n"
+      "SELFCAL - INFO : # Looking through data chunk 00 #\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "SELFCAL - INFO : # Calibrator solutions to target data applied #\n"
+      "SELFCAL - INFO : # No hiogh noise found in data chunk 00 #\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "SELFCAL - INFO : # Found 4 subband(s) in target data #\n"
+      "SELFCAL - INFO : # Moved to directory /data/adebahr/apertif/tutorial/A1/selfcal/01 #\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "SELFCAL - INFO : # Started splitting of subband 0 #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Adjusting chunk size to 0.0 for regular gridding of the data chunks over frequency #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Starting splitting of data chunk 0 for subband 0 #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Increasing frequency bin of data chunk 0 to keep bandwidth of chunks equal over the whole bandwidth #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # New frequency bin is 0.001 GHz #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Splitting of data chunk 0 for subband 0 done #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Starting splitting of data chunk 1 for subband 0 #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Increasing frequency bin of data chunk 1 to keep bandwidth of chunks equal over the whole bandwidth #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # New frequency bin is 0.001 GHz #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Splitting of data chunk 1 for subband 0 done #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Splitting of data for subband 0 done #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Started splitting of subband 1 #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Adjusting chunk size to 0.0 for regular gridding of the data chunks over frequency #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Starting splitting of data chunk 0 for subband 1 #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Increasing frequency bin of data chunk 0 to keep bandwidth of chunks equal over the whole bandwidth #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # New frequency bin is 0.001 GHz #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Splitting of data chunk 0 for subband 1 done #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Starting splitting of data chunk 1 for subband 1 #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Increasing frequency bin of data chunk 1 to keep bandwidth of chunks equal over the whole bandwidth #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # New frequency bin is 0.001 GHz #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Splitting of data chunk 1 for subband 1 done #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Splitting of data for subband 1 done #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Started splitting of subband 2 #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Adjusting chunk size to 0.0 for regular gridding of the data chunks over frequency #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Starting splitting of data chunk 0 for subband 2 #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Increasing frequency bin of data chunk 0 to keep bandwidth of chunks equal over the whole bandwidth #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # New frequency bin is 0.001 GHz #\n"
+      "SELFCAL - INFO : # Looking through data chunk 01 #\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "64\n0.000312499993015\n0.019999999553\n2.0\n2\n2\n0\n'channel,8,1,4,4'\n0\n'channel,8,33,4,4'\n64\n0.000312499993015\n0.019999999553\n2.0\n2\n2\n1\n'channel,8,1,4,4'\n1\n'channel,8,33,4,4'\n64\n0.000312499993015\n0.019999999553\n2.0\n2\n2\n2\n"
+      "0.000483484\n0.000161276\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "SELFCAL - INFO : # Splitting of data chunk 0 for subband 2 done #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Starting splitting of data chunk 1 for subband 2 #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Increasing frequency bin of data chunk 1 to keep bandwidth of chunks equal over the whole bandwidth #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # New frequency bin is 0.001 GHz #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Splitting of data chunk 1 for subband 2 done #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Splitting of data for subband 2 done #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Started splitting of subband 3 #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Adjusting chunk size to 0.0 for regular gridding of the data chunks over frequency #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Starting splitting of data chunk 0 for subband 3 #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Increasing frequency bin of data chunk 0 to keep bandwidth of chunks equal over the whole bandwidth #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # New frequency bin is 0.001 GHz #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Splitting of data chunk 0 for subband 3 done #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Starting splitting of data chunk 1 for subband 3 #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Increasing frequency bin of data chunk 1 to keep bandwidth of chunks equal over the whole bandwidth #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # New frequency bin is 0.001 GHz #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Splitting of data chunk 1 for subband 3 done #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Splitting of data for subband 3 done #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : ### Splitting of target data into individual frequency chunks done ###\n"
+      "SELFCAL - INFO : # Found high noise in channel(s) 15 #\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'channel,8,1,4,4'\n2\n'channel,8,33,4,4'\n64\n0.000312499993015\n0.019999999553\n2.0\n2\n2\n3\n'channel,8,1,4,4'\n3\n'channel,8,33,4,4'\n"
+      "0.000505542\n0.000156511\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Flagged channel(s) 15 in data chunk 01 #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Moved to directory /data/adebahr/apertif/tutorial/A1/selfcal/02 #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Looking through data chunk 02 #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Found high noise in channel(s) 15 #\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.000521792\n0.000174487\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Flagged channel(s) 15 in data chunk 02 #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Moved to directory /data/adebahr/apertif/tutorial/A1/selfcal/03 #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Looking through data chunk 03 #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Found high noise in channel(s) 15 #\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.000457711\n0.000189746\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Flagged channel(s) 15 in data chunk 03 #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : ### Automatic flagging of HI-line/RFI done ###\n"
      ]
     }
    ],
    "source": [
-    "scal.splitdata()"
+    "scal.flagline()"
    ]
   },
   {
