--- a/ipython-notebooks/tutorials/A2 - Calibrating single pointing HI WSRT data.ipynb
+++ b/ipython-notebooks/tutorials/A2 - Calibrating single pointing HI WSRT data.ipynb
@@ -376,48 +376,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "CROSSCAL - INFO : ### Applying system temperatures corrections ###\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "CROSSCAL - INFO : # Applying system temperature corrections to flux calibrator data #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "CROSSCAL - INFO : # System temperatures corrections to flux calibrator data applied #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "CROSSCAL - INFO : # Applying system temperature corrections to target data #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "CROSSCAL - INFO : # System temperatures corrections to target data applied #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "CROSSCAL - INFO : ### System temperatures corrections applied ###\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
       "CROSSCAL - INFO : ### Bandpass calibration on the flux calibrator data started ###\n"
      ]
     },
@@ -477,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -494,9 +452,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Creating directory /data/adebahr/apertif/tutorial/A2/selfcal #\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -594,17 +559,27 @@
      "text": [
       "SELFCAL - INFO : ### Splitting of target data into individual frequency chunks done ###\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'channel,8,1,128,128'\n"
-     ]
     }
    ],
    "source": [
     "scal.splitdata()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n00\n"
+     ]
+    }
+   ],
+   "source": [
+    "scal.flagline()"
    ]
   },
   {
