- final deep imaging using mfclean implemented - extraiterations options for both final clean modes implemented

--- a/ipython-notebooks/tutorials/A1 - Calibrating single pointing full polarisation WSRT data.ipynb
+++ b/ipython-notebooks/tutorials/A1 - Calibrating single pointing full polarisation WSRT data.ipynb
@@ -6795,13 +6795,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "FINAL - INFO : # Creating directory /data/adebahr/apertif/tutorial/A1/final/continuum/mf #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
       "FINAL - INFO : # Moved to directory /data/adebahr/apertif/tutorial/A1/final/continuum/mf #\n"
      ]
     },
@@ -6816,7 +6809,217 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "FINAL - INFO : # Theoretical noise for combined dataset is 2.75e-08 Jy/beam #\n"
+      "/home/apercal/pipeline/local/lib/python2.7/site-packages/numpy/lib/function_base.py:3858: RuntimeWarning: Invalid value encountered in median\n  r = func(a, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : # Theoretical noise for combined dataset is 1.32437642142e-05 Jy/beam #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : # Maximum value in the image is 0.0445423 Jy/beam #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : # Mask threshold minor cycle 0 is 0.0148474288483 Jy/beam #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : # Mask with threshold 0.0148474288483 Jy/beam created #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : # Clean noise threshold at minor cycle 0 is 0.00494914294945 Jy/beam #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : # Clean threshold at minor cycle 0 was set to 0.00494914294945 Jy/beam #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : Minor cycle 0 cleaning done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : # Cleaned image for minor cycle 0 created #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : # Residual image for major/minor cycle 0 created #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : # Maximum value in the image at minor cycle 1 is 0.0127941 Jy/beam #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : # Mask threshold at minor cycle 1 is 0.00213235802948 Jy/beam #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : # Mask with threshold 0.00213235802948 Jy/beam created #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : # Clean noise threshold at minor cycle 1 is 0.000710786009828 Jy/beam #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : # Clean threshold at major/minor cycle 1 was set to 0.000710786009828 Jy/beam #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : # Minor cycle 1 cleaning done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : # Cleaned image for minor cycle 1 created #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : # Residual image for Minor cycle 1 created #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : # Maximum value in the image at minor cycle 2 is 0.00186943 Jy/beam #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : # Mask threshold at minor cycle 2 is 0.000207714154385 Jy/beam #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : # Mask with threshold 0.000207714154385 Jy/beam created #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : # Clean noise threshold at minor cycle 2 is 6.92380514617e-05 Jy/beam #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : # Clean threshold at major/minor cycle 2 was set to 6.92380514617e-05 Jy/beam #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : # Minor cycle 2 cleaning done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : # Cleaned image for minor cycle 2 created #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : # Residual image for Minor cycle 2 created #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : ### Doing 5000 extra clean iterations for mfclean image ###\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : # Extra iteration cleaning done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : # Cleaned image created #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : # Residual image created #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FINAL - INFO : ### Extra iteration cleaning for mfclean image done ###\n"
      ]
     },
     {
