- wrote documentation in docs subdirectory - working on final module to create cube

--- a/ipython-notebooks/tutorials/A1 - Calibrating single pointing full polarisation WSRT data.ipynb
+++ b/ipython-notebooks/tutorials/A1 - Calibrating single pointing full polarisation WSRT data.ipynb
@@ -53,12 +53,32 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "LINE - INFO : ### Configuration file /home/adebahr/apercal/ipython-notebooks/tutorials/cfg/A1.cfg successfully read! ###\n"
+      "FINAL - INFO : ### Configuration file /home/adebahr/apercal/ipython-notebooks/tutorials/cfg/A1.cfg successfully read! ###\n"
      ]
     }
    ],
    "source": [
-    "line = apercal.line('/home/adebahr/apercal/ipython-notebooks/tutorials/cfg/A1.cfg')"
+    "final = apercal.final('/home/adebahr/apercal/ipython-notebooks/tutorials/cfg/A1.cfg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n        Produces a line cube by imaging the individual frequency chunks (options chunk) or each individual channel (option channel)\\n        '"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final.line.__doc__"
    ]
   },
   {
@@ -70,396 +90,84 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "LINE - INFO : # Creating directory /data/adebahr/apertif/tutorial/A1/line #\n"
+      "FINAL - INFO : ### Starting line imaging of full dataset ###\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "LINE - INFO : # Moved to directory /data/adebahr/apertif/tutorial/A1/line #\n"
+      "FINAL - INFO : # Moved to directory /data/adebahr/apertif/tutorial/A1/final #\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "LINE - INFO : ### Splitting of target data into individual freqeuncy chunks for continuum subtraction started ###\n"
+      "FINAL - INFO : # Moved to directory /data/adebahr/apertif/tutorial/A1/final/line #\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "LINE - INFO : # Found 4 subband(s) in target data #\n"
+      "FINAL - INFO : # Imaging each individual channel seperately #\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "LINE - INFO : # Started splitting of subband 0 #\n"
+      "FINAL - INFO : # All channels of chunk 00 imaged #\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "LINE - INFO : # Adjusting chunk size to 0.019999999553 GHz for regular gridding of the data chunks over frequency #\n"
+      "FINAL - INFO : # All channels of chunk 01 imaged #\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "LINE - INFO : # Starting splitting of data chunk 0 for subband 0 #\n"
+      "FINAL - INFO : # All channels of chunk 02 imaged #\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "LINE - INFO : # Using frequency binning of 0.0002 for all subbands #\n"
+      "FINAL - INFO : # All channels of chunk 03 imaged #\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "LINE - INFO : # Creating directory /data/adebahr/apertif/tutorial/A1/line/00 #\n"
+      "FINAL - INFO : # Combining images to line cube and writing frequency file #\n"
      ]
     },
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LINE - INFO : # Splitting of data chunk 0 for subband 0 done #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Splitting of data for subband 0 done #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Started splitting of subband 1 #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Adjusting chunk size to 0.019999999553 GHz for regular gridding of the data chunks over frequency #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Starting splitting of data chunk 0 for subband 1 #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Using frequency binning of 0.0002 for all subbands #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Creating directory /data/adebahr/apertif/tutorial/A1/line/01 #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Splitting of data chunk 0 for subband 1 done #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Splitting of data for subband 1 done #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Started splitting of subband 2 #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Adjusting chunk size to 0.019999999553 GHz for regular gridding of the data chunks over frequency #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Starting splitting of data chunk 0 for subband 2 #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Using frequency binning of 0.0002 for all subbands #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Creating directory /data/adebahr/apertif/tutorial/A1/line/02 #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Splitting of data chunk 0 for subband 2 done #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Splitting of data for subband 2 done #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Started splitting of subband 3 #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Adjusting chunk size to 0.019999999553 GHz for regular gridding of the data chunks over frequency #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Starting splitting of data chunk 0 for subband 3 #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Using frequency binning of 0.0002 for all subbands #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Creating directory /data/adebahr/apertif/tutorial/A1/line/03 #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Splitting of data chunk 0 for subband 3 done #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Splitting of data for subband 3 done #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : ### Splitting of target data into individual frequency chunks done ###\n"
+      "(1, 1, 1537, 1537)\n"
      ]
     }
    ],
    "source": [
-    "line.splitdata()"
+    "final.line()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : ### Copying gains from continuum to line data ###\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : ### Gains from continuum to line data copied ###\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "line.transfergains()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Moved to directory /data/adebahr/apertif/tutorial/A1/line #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : ### Starting continuum subtraction of individual chunks using uvmodel ###\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Applied gains to chunk 00 for subtraction of continuum model #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Found most complete model for chunk 00 in /data/adebahr/apertif/tutorial/A1/selfcal/00/04/model_01 #\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Continuum subtraction using uvmodel method for chunk 00 done #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Applied gains to chunk 01 for subtraction of continuum model #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Found most complete model for chunk 01 in /data/adebahr/apertif/tutorial/A1/selfcal/01/04/model_01 #\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Continuum subtraction using uvmodel method for chunk 01 done #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Applied gains to chunk 02 for subtraction of continuum model #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Found most complete model for chunk 02 in /data/adebahr/apertif/tutorial/A1/selfcal/02/04/model_01 #\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Continuum subtraction using uvmodel method for chunk 02 done #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Applied gains to chunk 03 for subtraction of continuum model #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Found most complete model for chunk 03 in /data/adebahr/apertif/tutorial/A1/selfcal/03/04/model_01 #\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LINE - INFO : # Continuum subtraction using uvmodel method for chunk 03 done #\n"
-     ]
-    }
-   ],
-   "source": [
-    "line.subtract()"
+    ""
    ]
   },
   {
